--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "bmkg-proxy",
   "version": "1.0.0",
-  "description": "Simple proxy for BMKG images (Vercel Serverless)",
-  "engines": { "node": "18.x" }
+  "type": "module",
+  "engines": {
+    "node": "22.x"
+  },
+  "dependencies": {
+    "node-fetch": "^3.3.2"
+  }
 }
